<resources>
    <string name="general_text_ok">OK</string>
    <string name="general_text_retry">Retry</string>
    <string name="general_text_cancel">Cancel</string>
    <string name="general_text_discard">Discard</string>
    <string name="general_text_close">Close</string>
    <string name="general_interpunct">●</string>
    <string name="general_text_today">วันนี้</string>
    <string name="general_alertmessage_no_internet_connection">No internet connection</string>
    <string name="general_alertmessage_title">Request Failed</string>
    <string name="general_alertmessage_serviceerror_title">Service Error</string>
    <string name="general_alertmessage_somethingwentwrong_title">Something Went Wrong</string>
    <string name="general_alertmessage_serviceerror_400_title">Data Request Error (400)</string>
    <string name="general_alertmessage_serviceerror_401_title">Unauthorized User (401)</string>
    <string name="general_alertmessage_serviceerror_403_title">Data Request Error (403)</string>
    <string name="general_alertmessage_serviceerror_404_title">Data Not Found (404)</string>
    <string name="general_alertmessage_serviceerror_500_title">Internal Server Error (500)</string>
    <string name="general_alertmessage_serviceerror_503_title">Internal Server Error (503)</string>
    <string name="general_alertmessage_error_code">(Error Code: %1$s)</string>
    <string name="general_alertmessage_cannot_specify_role">ไม่สามารถระบุประเภทของผู้ใช้งานได้</string>
    <string name="general_alertmessage_loading_title">Please Wait...</string>
    <string name="general_room">ห้องพัก %1$s</string>
    <string name="general_triple_text_format">%1$s %2$s %3$s</string>
    <string name="general_credit">%1$s หน่วยกิต</string>
    <string name="general_code_and_nickname_placeholder">#%1$s %2$s</string>
    <string name="general_class_room">ห้องเรียน %1$s</string>
    <string name="general_no_message_text">ไม่มีข้อความ</string>
    <string name="general_no_activity_text">ไม่มีกิจกรรม</string>
    <string name="general_add_text">เพิ่ม</string>
    <string name="general_delete_text">ลบ</string>
    <string name="general_edit_text">แก้ไข</string>
    <string name="general_save_text">บันทึก</string>
    <string name="general_create_text">สร้าง</string>
    <string name="general_attach_image_text">แนบรูป</string>
    <string name="general_attach_file_text">แนบไฟล์</string>
    <string-array name="full_day_name">
        <item>อาทิตย์</item>
        <item>จันทร์</item>
        <item>อังคาร</item>
        <item>พุธ</item>
        <item>พฤหัส</item>
        <item>ศุกร์</item>
        <item>เสาร์</item>
    </string-array>
    <string name="screen_header_subtitle">LAST UPDATED AT %1$s HRS.</string>
    <string name="update_failed">UPDATE FAILED</string>
    <string name="update_new_data">PLEASE WAIT...</string>
    <string name="update_just_now">UPDATED JUST NOW</string>
    <string name="date_time_just_now">เมื่อสักครู่นี้</string>
    <string name="date_time_post_at">เวลา</string>
    <string name="date_time_place_holder">%1$s น.</string>
    <plurals name="date_time_hour_ago">
        <item quantity="one">%1$d ชั่วโมงที่แล้ว</item>
        <item quantity="other">%1$d ชั่วโมงที่แล้ว</item>
    </plurals>
    <plurals name="date_time_minute_ago">
        <item quantity="one">%1$d นาทีที่แล้ว</item>
        <item quantity="other">%1$d นาทีที่แล้ว</item>
    </plurals>
    <string name="today_happenings_announcement">ANNOUNCEMENT</string>
    <string name="today_happenings_see_more">See More</string>
    <string name="today_timeline">TIMELINE</string>
    <string name="today_happenings">HAPPENINGS</string>
    <string name="today_segment_title">TODAY</string>
    <string name="today_nothing_todo_title">NO ACTIVITIES</string>
    <string name="today_timeline_time" translatable="false"> - %2s</string>
    <string name="event_list_title">EVENT LIST</string>
    <string name="menu_id_card_number">รหัสประจำตัว %1$s</string>
    <string name="menu_semester_start">วันเปิดภาคเรียน\n %1$s</string>
    <string name="menu_notification_inbox_text">กล่องข้อความ</string>
    <string name="menu_contact_info_office_email_text">อีเมล</string>
    <string name="menu_contact_info_personal_email_text">อีเมลส่วนตัว</string>
    <string name="menu_contact_info_office_phone_text">โทรศัพท์</string>
    <string name="menu_contact_info_personal_phone_text">โทรศัพท์ส่วนตัว</string>
    <string name="menu_contact_info_close_text">ปิด</string>
    <string name="menu_download_failed_text">โหลดข้อมูลไม่สำเร็จ</string>
    <string name="menu_contact_info_text">ข้อมูลการติดต่อ</string>
    <string name="class_detail_tab_activity">ข่าวสาร</string>
    <string name="class_detail_tab_attendance">การเข้าเรียน</string>
    <string name="class_detail_tab_student">นักเรียน</string>
    <string name="class_detail_tab_member">สมาชิก</string>
    <string name="class_detail_tab_homework">ASSIGNMENT</string>
    <string name="class_detail_study_plan_title">แผนการสอน</string>
    <string name="school_record_under_evaluation">อยู่ระหว่างการประเมิน</string>
    <string name="school_record_no_record">ไม่มีการเรียน</string>
    <string name="school_record_no_evaluation_record">ไม่มีผลการประเมิน</string>
    <string name="school_record_in_progress">In Progress</string>
    <string name="school_record_complete">Completed</string>
    <string name="school_record_grade_summary_text">ภาพรวมพัฒนาการ</string>
    <string name="school_record_evaluation_title">เกณฑ์การประเมิน</string>
    <string name="school_record_overall_text">Overall</string>
    <string name="school_record_progress_text">ความก้าวหน้าตามจุดประสงค์การเรียนรู้</string>
    <string name="school_record_instructor_comment_text">ความคิดเห็นอาจารย์ประจำวิชา</string>
    <string name="school_record_expect_text">ผลการเรียนรู้ที่คาดหวัง</string>
    <string name="school_record_no_activity">ไม่มีผลประเมินกิจกรรม</string>
    <string name="school_record_no_ability">ไม่มีผลประเมินสมรรถนะ</string>
    <string name="class_post_create_post_title">สร้างโพสต์ใหม่</string>
    <string name="class_post_no_post">ไม่มีโพสต์</string>
    <string name="class_post_action_title_like">ถูกใจ</string>
    <string name="class_post_action_title_comment">ความคิดเห็น</string>
    <string name="class_post_open_file_title">เปิดไฟล์ด้วย</string>
    <string name="class_post_author_header_new">ใหม่</string>
    <string name="class_post_updated_at">แก้ไขเมื่อ: %1$s</string>
    <string name="class_post_delete">ลบ</string>
    <string name="class_post_edit">แก้ไข</string>
    <plurals name="class_post_count_like">
        <item quantity="zero">0 ถูกใจ</item>
        <item quantity="one">1 ถูกใจ</item>
        <item quantity="other">%1$d ถูกใจ</item>
    </plurals>
    <plurals name="class_post_count_comment">
        <item quantity="zero">0 ความคิดเห็น</item>
        <item quantity="one">1 ความคิดเห็น</item>
        <item quantity="other">%1$d ความคิดเห็น</item>
    </plurals>
    <string name="class_post_count_read">เห็นแล้ว %1d คน</string>
    <string name="class_post_count_read_everyone">เห็นแล้วทุกคน</string>
    <string name="online_class_container_title">คลาสเรียนออนไลน์</string>
    <string name="image_transition_name" translatable="false">image_transition</string>
    <string name="class_post_comment_write_comment">แสดงความคิดเห็น…</string>
    <string name="class_post_comment_author_name_place_holder">#%1$s %2$s</string>
    <string-array name="class_post_comment_action_owner">
        <item>คัดลอกข้อความ</item>
        <item>ลบ</item>
        <item>ยกเลิก</item>
    </string-array>
    <string-array name="class_post_comment_action_other">
        <item>คัดลอกข้อความ</item>
        <item>ยกเลิก</item>
    </string-array>
    <string name="class_member_instructor_title">อาจารย์ (%1$d)</string>
    <string name="class_member_instructor_homeroom_title">อาจารย์ประจำชั้น (%1$d)</string>
    <string name="class_member_student_title">นักเรียน (%1$d)</string>
    <string name="class_member_number_place_holder">#%1$s %2$s</string>
    <string name="class_attendance_summary_info_from">จาก</string>
    <string name="class_attendance_valid_class_count">%1d คาบเรียน</string>
    <string name="class_attendance_percentage_place_holder">%1d%%</string>
    <string name="class_attendance_checked_item_title_place_holder">เรียนครั้งที่ %1$s</string>
    <string name="class_attendance_present">มาเรียน</string>
    <string name="class_attendance_absent">ขาด</string>
    <string name="class_attendance_leave">ลา</string>
    <string name="class_attendance_late">สาย</string>
    <string name="class_attendance_no_record">ไม่มีบันทึก</string>
    <string name="class_attendance_class_check_date_place_holder">%1$s %2$s น.</string>
    <string name="class_group_junior_class_level_place_holder">มัธยมศึกษาปีที่ %1$s/%2$s</string>
    <string name="class_group_senior_class_level_place_holder">มัธยมศึกษาปีที่ %1$s</string>
    <string name="class_group_navigation_item_advisory_title">Advisory</string>
    <string name="class_group_navigation_item_homeroom_title">Homeroom</string>
    <string name="class_group_navigation_item_assignment_title">Assignment</string>
    <string name="class_group_navigation_item_guardians_title">ผู้ปกครอง</string>
    <string name="class_group_navigation_item_class_schedule_title">ตารางเรียน</string>
    <string name="class_group_navigation_item_examination_title">ตารางสอบ</string>
    <string name="class_group_other_instructor_count_place_holder">+%1d</string>
    <string name="class_group_no_class_group">ไม่มีกลุ่มเรียน</string>
    <string name="learning_pathway_screen_title">วางแผนการเรียน</string>
    <string name="learning_pathway_header">ม.%1$s (%2$s/%3$s)</string>
    <string name="learning_pathway_required_course_count">%1$s วิชาพื้นฐาน</string>
    <string name="learning_pathway_concentrate_course_count">%1$s วิชาเฉพาะทาง</string>
    <string name="learning_pathway_no_course_text">ไม่มีแผนการเรียน</string>
    <string name="learning_pathway_required_course_text">วิชาบังคับ</string>
    <string name="learning_pathway_add_course_text">เพิ่มวิชา</string>
    <string name="learning_pathway_add_course_preview_credit">%1$s หน่วยกิต (ต่ำสุด = %2$s, สูงสุด = %3$s)</string>
    <string name="learning_pathway_term_credit">ต่ำสุด = %1$s หน่วยกิต, สูงสุด = %2$s หน่วยกิต</string>
    <string name="class_schedule_student_title">ตารางเรียน</string>
    <string name="class_schedule_instructor_title">ตารางสอน</string>
    <string name="class_schedule_day_with_short_date_title">%1$s\n%2$s</string>
    <string name="class_schedule_range">%1$s - %2$s</string>
    <string name="class_schedule_course_code_and_name">%1$s %2$s</string>
    <string name="class_schedule_instructor_course_title">%1$s (%2$s) %3$s</string>
    <string name="class_schedule_instructor_and_room">%1$s ห้องเรียน %2$s</string>
    <string name="class_schedule_all_class_title">วิชาทั้งหมด</string>
    <string name="class_schedule_term">ภาคเรียนที่ %1$s/%2$s</string>
    <string name="class_schedule_no_class">ไม่มีวิชา</string>
    <string name="class_schedule_student_no_class">ไม่มีวิชาเรียน</string>
    <string name="class_schedule_instructor_no_class">ไม่มีวิชาสอน</string>
    <string name="information_dialog_calendar_information_color_header">ความหมายของสี</string>
    <string name="exam_schedule_title">ตารางสอบ</string>
    <string name="exam_schedule_room">ห้องสอบ %1$s</string>
    <string name="exam_schedule_range">%1$s - %2$s</string>
    <string name="exam_schedule_course_code_and_name">%1$s %2$s</string>
    <string name="assignment_create_assignment">สร้าง Assignment</string>
    <string name="assignment_create_assignment_title_text">หัวข้อ</string>
    <string name="assignment_create_assignment_description_text">รายละเอียด</string>
    <string name="assignment_create_assignment_deadline_text">กำหนดส่ง</string>
    <string name="assignment_create_assignment_select_date_time_text">เลือกวันและเวลา</string>
</resources>